--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="cover c3" data-piece="3"></div>
         <div class="cover c4" data-piece="4"></div>
         <div class="cover c5" data-piece="5"></div> -->
-        <video id="puzzle-video" class="puzzle-video" src="anni1month.mov" playsinline controls hidden></video>
+        <video id="puzzle-video" class="puzzle-video" src="anni1month.mp4" playsinline controls hidden></video>
         <div id="puzzle-congrats" class="puzzle-congrats" hidden>Lời nhắn yêu thương 💌</div>
       </div>
       <div class="progress" id="progress">Mảnh ghép: 0/1</div>
@@ -80,7 +80,7 @@
 
     <section id="final-section" class="final-section" hidden>
       <div class="final-visual">
-        <video id="final-video" class="final-video" src="anni1month.mov" controls preload="metadata" playsinline hidden></video>
+        <video id="final-video" class="final-video" src="anni1month.mp4" controls preload="metadata" playsinline hidden></video>
       </div>
       <div class="final-message" id="final-message" hidden>
         Chúc mừng 1 tháng yêu xa! Dù cách xa, trái tim vẫn chung nhịp. Hẹn ngày gặp nhau thật sớm.
